--- a/generators/app/templates/static/scss/components/_components.index.scss
+++ b/generators/app/templates/static/scss/components/_components.index.scss
@@ -40,7 +40,7 @@
 /**
  * Tables
  */
-@import "tables/components.cart-table";
+@import "tables/components.table-name-table";
 
 /**
  * Modals
@@ -66,9 +66,9 @@
 /**
  * Modules
  */
-@import "modules/components.full-width-media-module";
+@import "modules/components.module-name-module";
 
 /**
  * Gutenberg blocks
  */
-@import "blocks/components.full-width-media-block";
+@import "blocks/components.block-name-block";
