--- a/generators/app/templates/static/scss/components/_components.content-loader.scss
+++ b/generators/app/templates/static/scss/components/_components.content-loader.scss
@@ -10,7 +10,10 @@
     justify-content: center;
     display: none;
 
-    .loading & {
+    .is-loading & {
         display: flex;
+    }
+
+    .c-spinner {
     }
 }
