--- a/generators/app/templates/static/scss/tools/_tools.interaction.scss
+++ b/generators/app/templates/static/scss/tools/_tools.interaction.scss
@@ -42,12 +42,6 @@
                 0 0 0 2px $focus-indicator-divider-color,
                 0 0 0 4px $focus-indicator-color;
             @content;
-
-            @include mq(null, xl) {
-                box-shadow:
-                    0 0 0 get-vw(2px) $focus-indicator-divider-color,
-                    0 0 0 get-vw(4px) $focus-indicator-color;
-            }
         }
     }
 }
@@ -90,6 +84,7 @@
     line-height: normal;
     -webkit-font-smoothing: inherit;
     -moz-osx-font-smoothing: inherit;
+    -webkit-tap-highlight-color: transparent;
 
     &:hover,
     &:focus,
