--- a/generators/app/templates/static/scss/objects/_objects.navigation.scss
+++ b/generators/app/templates/static/scss/objects/_objects.navigation.scss
@@ -1,2 +1,7 @@
 .o-navigation {
+    position: fixed;
+    //if wp project, move top of navigation down by the height of the admin bar
+    top: var(--wp-admin--admin-bar--height, 0);
+    left: 0;
+    width: 100%;
 }
