--- a/generators/app/templates/static/scss/utilities/_utilities.icon.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.icon.scss
@@ -1,7 +1,7 @@
 .u-icon {
     display: inline-block;
     width: 1em;
-    height: auto;
+    height: 1em;
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
