--- a/generators/app/templates/static/scss/components/_components.button.scss
+++ b/generators/app/templates/static/scss/components/_components.button.scss
@@ -8,8 +8,8 @@
     text-decoration: none;
     cursor: pointer;
     margin: 0;
-    padding-left: var(--s-50);
-    padding-right: var(--s-50);
+    padding-left: var(--s-50, 50px);
+    padding-right: var(--s-50, 50px);
     overflow: hidden;
     outline: 0;
     border: none;
@@ -60,8 +60,8 @@
     &--small {
         @include fluidValue("height", null, 40px);
 
-        padding-left: var(--s-40);
-        padding-right: var(--s-40);
+        padding-left: var(--s-40, 40px);
+        padding-right: var(--s-40, 40px);
     }
 
     &__loader {
