--- a/generators/app/templates/static/scss/components/_components.content-loader.scss
+++ b/generators/app/templates/static/scss/components/_components.content-loader.scss
@@ -1,5 +1,5 @@
 .c-content-loader {
-    padding-top: var(--s-60);
+    padding-top: var(--s-60, 60px);
     position: absolute;
     top: 0;
     left: 0;
