--- a/generators/app/templates/static/scss/components/_components.social-icons.scss
+++ b/generators/app/templates/static/scss/components/_components.social-icons.scss
@@ -1,7 +1,7 @@
 .c-social-icons {
     display: flex;
     align-items: center;
-    gap: var(--s-20);
+    gap: var(--s-20, 20px);
     font-size: 1.5em;
 
     li,
