--- a/generators/app/templates/static/scss/utilities/_utilities.spacing.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.spacing.scss
@@ -3,15 +3,15 @@
 }
 
 .u-pt-small {
-    padding-top: var(--s-60);
+    padding-top: var(--s-60, 60px);
 }
 
 .u-pt-medium {
-    padding-top: var(--s-90);
+    padding-top: var(--s-90, 90px);
 }
 
 .u-pt-large {
-    padding-top: var(--s-125);
+    padding-top: var(--s-125, 125px);
 }
 
 .u-pb-0 {
@@ -19,13 +19,13 @@
 }
 
 .u-pb-small {
-    padding-bottom: var(--s-60);
+    padding-bottom: var(--s-60, 60px);
 }
 
 .u-pb-medium {
-    padding-bottom: var(--s-90);
+    padding-bottom: var(--s-90, 90px);
 }
 
 .u-pb-large {
-    padding-bottom: var(--s-125);
+    padding-bottom: var(--s-125, 125px);
 }
