responsive image/viedeo fixes

--- a/generators/app/templates/static/scss/components/_components.index.scss
+++ b/generators/app/templates/static/scss/components/_components.index.scss
@@ -7,6 +7,7 @@
 @import "components.hamburger";
 @import "components.media-loader";
 @import "components.media-overlay";
+@import "components.media-trigger";
 @import "components.responsive-media";
 @import "components.breadcrumbs";
 @import "components.button";
