responsive media hotfix

--- a/generators/app/templates/static/scss/components/_components.responsive-media.scss
+++ b/generators/app/templates/static/scss/components/_components.responsive-media.scss
@@ -1,6 +1,7 @@
 .c-responsive-media {
     position: relative;
     overflow: hidden;
+    width: 100%;
 
     &--background {
         position: absolute;
