package versions bump

--- a/generators/app/templates/static/scss/generics/_generics.index.scss
+++ b/generators/app/templates/static/scss/generics/_generics.index.scss
@@ -5,4 +5,4 @@
 /**
  * Third party generics
  */
-@import "node_modules/@bornfight/b-reset/src/b-reset";
+@import "/node_modules/@bornfight/b-reset/src/b-reset";
